testdata/invalid/invalid_message_duplicate_name.bop
message Test {
	1 -> int64 foo;
	2 -> int64 foo;
}